# WobBT

./: .gitignore  README.md  WobBT.sln  premake5.lua  rebuild.sh
WobBT/: CMakeLists.txt  WobBT.vcxproj  config.py  get_data.py  imgui.ini  premake5.lua
WobBT/Dependencies/matplotlib/: matplotlibcpp.h
WobBT/src/: Analyzer.h  Analyzers.h  Binance.cpp  Binance.h  Broker.cpp  Broker.h  Cerebro.cpp  Cerebro.h  Debug.h  IBroker.h  Indicator.h  OHLC.cpp  OHLC.h  Strategy.h  Strats.h  WobBT.cpp  WobBTApp.cpp  WobBTApp.h
WobBT/src/Strats/: GoldenCross.h  LiveStratOld.h  MyStratV1.h  MyStratV2.h  MyStratV3.h  MyStratV4.h  RSIStrategy.h  RelativeRangeStrategy.h
